fix
cuted label of input in scrollbox
switch star looks like active after unfollow
close menu after menu item click
permissions group menu item styles
too small input in autocomplete when focused

--- a/apps/gdmn-nxt-web/src/app/components/switch-star/switch-star.module.less
+++ b/apps/gdmn-nxt-web/src/app/components/switch-star/switch-star.module.less
@@ -1,4 +1,5 @@
-.chosenButton {}
+.chosenButton {
+}
 
 .unselectedStar {
   // position: absolute !important;
@@ -12,11 +13,11 @@
   display: none !important;
 }
 
-.chosenButton:hover .unselectedStar {
+.chosenButton:hover .unselectedStarHover {
   display: none;
 }
 
-.chosenButton:hover .selectedStar {
+.chosenButton:hover .selectedStarHover {
   display: inline-block !important;
   // transform: scale(1.5);
 }
